Added comments on breadthFirstSearch implementation.